remove preview buid